feat: implement advanced UI and reply generation from test branch
- Add generateReply endpoint to backend for AI-powered reply suggestions
- Implement comprehensive Flutter UI with mention cards and action buttons
- Add getAnalyzedMentions, createLead, and generateReply methods to API service
- Create interactive dashboard with reply and lead generation functionality
- Add proper error handling and loading states
- Include reply dialog with suggested responses

--- a/crm_social_media_assistant/backend_service/.env
+++ b/crm_social_media_assistant/backend_service/.env
@@ -1,11 +1,12 @@
 # Odoo Credentials
-ODOO_URL=http://127.0.0.1:8069
+ODOO_URL=http://127.0.0.1:8069/
 ODOO_DB=odoo
 ODOO_USERNAME=admin
 ODOO_PASSWORD=admin
 
 # Twitter API v2 Credentials
-TWITTER_BEARER_TOKEN=YOUR_BEARER_TOKEN_HERE
+TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAACgj3AEAAAAAKKEcrNw6A6WDWH3U2PcTZp+5FXg=Ww5wjvtMvrTkHzbSXzI8T7C4S260z4Lu8O40Hg2YfpSdrhyjyd
+TWITTER_ACCOUNT_ID_TO_MONITOR=1420641137426042882
 
 # OpenAI API Key
-OPENAI_API_KEY=YOUR_OPENAI_API_KEY_HERE
+OPENAI_API_KEY=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
