--- a/crm_social_media_assistant/frontend_service/pubspec.yaml
+++ b/crm_social_media_assistant/frontend_service/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   http: ^1.1.0
   cupertino_icons: ^1.0.2
+  fl_chart: ^0.64.0
 
 dev_dependencies:
   flutter_test:
